--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "start:docker": "next start -p 3000 -H 0.0.0.0"
   },
   "dependencies": {
     "axios": "^1.6.2",
